force-app/main/default/objects/Marketing_Cloud_Settings__c/Marketing_Cloud_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Marketing Cloud Settings</label>
</CustomObject>