force-app/main/default/objects/Marketing_Cloud_Settings__c/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <description>Access Token is used to store access token to call MC API</description>
    <inlineHelpText>Access Token is used to store access token to call MC API</inlineHelpText>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>