force-app/main/default/objects/Marketing_Cloud_Settings__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Client Id of the created application in Marketing Cloud</description>
    <inlineHelpText>Client Id of the created application in Marketing Cloud</inlineHelpText>
    <label>ClientId</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>