force-app/main/default/objects/Marketing_Cloud_Settings__c/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <description>Client secret of the created application in Marketing Cloud</description>
    <inlineHelpText>Client secret of the created application in Marketing Cloud</inlineHelpText>
    <label>ClientSecret</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>