force-app/main/default/objects/Marketing_Cloud_Settings__c/fields/Email_Sender_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Sender_Address__c</fullName>
    <description>Email Sender address</description>
    <inlineHelpText>Email Sender address</inlineHelpText>
    <label>Email Sender Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>