force-app/main/default/objects/Marketing_Cloud_Settings__c/fields/Email_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Sender_Name__c</fullName>
    <description>Email Sender Name</description>
    <inlineHelpText>Email Sender Name</inlineHelpText>
    <label>Email Sender Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>