force-app/main/default/objects/Marketing_Cloud_Settings__c/fields/EmailMessageId__c.field-meta.xml
<CustomField>
    <fullName>EmailMessageId__c</fullName>
    <description>External Id of the triggered Marketing Cloud Email</description>
    <inlineHelpText>External Id of the triggered Marketing Cloud Email</inlineHelpText>
    <label>EmailMessageId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>