force-app/main/default/objects/Marketing_Cloud_Settings__c/fields/ShortCode__c.field-meta.xml
<CustomField>
    <fullName>ShortCode__c</fullName>
    <description>Marketing Cloud SMS Short Code</description>
    <inlineHelpText>Marketing Cloud SMS Short Code</inlineHelpText>
    <label>ShortCode</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>