force-app/main/default/objects/Marketing_Cloud_Settings__c/fields/SMSKeyword__c.field-meta.xml
<CustomField>
    <fullName>SMSKeyword__c</fullName>
    <description>SMS Message keyword in Marketing Cloud (Looks like FREETEXT / BAJA / ETC )</description>
    <inlineHelpText>SMS Message keyword in Marketing Cloud (Looks like FREETEXT / BAJA / ETC )</inlineHelpText>
    <label>SMSKeyword</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>