force-app/main/default/objects/Marketing_Cloud_Settings__c/fields/SMSMessageId__c.field-meta.xml
<CustomField>
    <fullName>SMSMessageId__c</fullName>
    <description>SMS Message Id in Marketing Cloud (Looks like MTIzOjc4OjA )</description>
    <inlineHelpText>SMS Message Id in Marketing Cloud (Looks like MTIzOjc4OjA )</inlineHelpText>
    <label>SMSMessageId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>