force-app/main/default/objects/Marketing_Cloud_Settings__c/fields/TokenExpires__c.field-meta.xml
<CustomField>
    <fullName>TokenExpires__c</fullName>
    <label>TokenExpires</label>
    <type>DateTime</type>
</CustomField>